--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ng-select/ng-select": "^2.6.0",
     "@types/lodash": "^4.14.108",
     "angular-tree-component": "^7.2.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "ngx-bootstrap": "^3.0.1",
     "ol": "5.0.0",
     "proj4": "^2.4.4",
@@ -21,9 +21,9 @@
   "main": "dist/cui-controls.module.js",
   "devDependencies": {
     "@angular/compiler": "6.0.9",
-    "@angular/compiler-cli": "6.0.9",
-    "typescript": "2.7.2",
-    "node-sass": "^4.12.0"
+    "@angular/compiler-cli": "^12.2.11",
+    "node-sass": "^6.0.1",
+    "typescript": "2.7.2"
   },
   "scripts": {
     "scss": "node-sass --watch src/scss -o src/css"
